--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pinia/nuxt": "^0.5.5",
     "axios": "^1.7.7",
     "nuxt": "^3.13.0",
+    "nuxt-swiper": "^1.2.2",
     "pinia": "^2.2.4",
     "vue": "latest",
     "vue-router": "latest"
