kurang logo powered

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hennge/vue3-pagination": "^1.0.17",
     "@nuxt/icon": "^1.5.6",
+    "@nuxtjs/google-fonts": "3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.5",
     "axios": "^1.7.7",
