--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -27,7 +27,7 @@ jobs:
           echo "VITE_CRYPTO_IV_KEY=3a3b1d1a39567871344951204a426150" >> .env
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run build
         run: npm run build
@@ -57,6 +57,6 @@ jobs:
 
       - name: Sync dist with remote server
         run: |
-          rsync -avz ./dist/ ${{ secrets.TEKITA_SSH_USER }}@${{ secrets.TEKITA_REMOTE_SERVER }}:${{ secrets.PROJECT_PATH }}
+          rsync -avz ./dist/ ${{ secrets.TEKITA_SSH_USER }}@${{ secrets.TEKITA_REMOTE_SERVER }}:${{ secrets.PROJECT_PATH }}/dist
         env:
           SSH_PRIVATE_KEY: ${{ secrets.TEKITA_SSH_PRIVATE_KEY }}
